--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,7 +15,12 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/circleSpec.js"></script>
+  <script src="spec/bouncySpec.js"></script>
+
   <script src="src/dancer.js"></script>
+  <script src="src/circleDancer.js"></script>
+  <script src="src/bouncyDancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
 </head>
 <body>
