--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,8 +15,8 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
-  <script src="spec/circleSpec.js"></script>
-  <script src="spec/bouncySpec.js"></script>
+  <script src="spec/circleDancerSpec.js"></script>
+  <script src="spec/bouncyDancerSpec.js"></script>
 
   <script src="src/dancer.js"></script>
   <script src="src/circleDancer.js"></script>
