--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,9 +12,9 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>   
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BouncyDancer">add a bouncy dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="CircleDancer">add a circle dancer
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="CircleDancer">add a circle dancer</a>
       <a href="#" id='lineUpButton'>Line up</a>
       <script src="src/init.js"></script>
     </div>
